Webshop voucher page fix status block title and spacing

--- a/src/sources/forus-webshop/scss/_common/sections/blocks/transactions.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/transactions.scss
@@ -7,6 +7,8 @@
         margin-bottom: 50px;
 
         .transactions-header {
+            display: flex;
+            align-items: center;
             border-top-left-radius: inherit;
             border-top-right-radius: inherit;
             padding: 25px;
@@ -15,6 +17,7 @@
             .transactions-title {
                 color: #282b39;
                 font: 700 22px/24px $bf;
+                padding-right: 8px;
             }
         }
 
